--- a/static/style.css
+++ b/static/style.css
@@ -22,8 +22,7 @@ html,body {
 	z-index:2;
 	bottom:0;
 	left:0;
-	position:absolute;
-	top: expression_r(documentElement.scrollTop);
+	position:fixed;
 }
 #head p {
 	margin: 0px;
@@ -85,7 +84,6 @@ html,body {
 #st1,#st2 {
 	margin: 0px;
 	padding: 0px;
-/*	margin-top: 100px;	*/
 	height: 80px;
 	width: 50%;
 }
@@ -195,7 +193,7 @@ html,body {
 	z-index:3;
 	bottom:100px;
 	left:0;
-	position:absolute;
+	position:fixed;
 	overflow: auto;
 	border-top: 1px solid #CCC;
 }
